<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".converter.ConverterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/converter_title_label"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtResultTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtLayoutBinary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="64dp"
            android:hint="@string/converter_binary_number_label"
            app:counterEnabled="true"
            app:counterMaxLength="8"
            app:errorEnabled="true"
            app:helperText="Just type the numbers: 0 or 1"
            app:layout_constraintEnd_toEndOf="@+id/txtTitle"
            app:layout_constraintStart_toStartOf="@+id/txtTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtBinary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLength="8" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtResultTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="64dp"
            android:text="@string/converter_result_title_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonConvert"
            app:layout_constraintStart_toStartOf="@id/edtLayoutBinary"
            app:layout_constraintTop_toBottomOf="@+id/edtLayoutBinary"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/converter_result"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/txtResultTitle"
            app:layout_constraintStart_toEndOf="@id/txtResultTitle"
            app:layout_constraintTop_toTopOf="@id/txtResultTitle" />

        <Button
            android:id="@+id/buttonConvert"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="32dp"
            android:enabled="false"
            android:text="@string/converter_convert_label"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>